# WeatherApp-Observer

./: CMakeLists.txt  CSI.cpp  CSI.h  KUPA.h  Location.cpp  Location.h  Memory_tracker.cpp  Memory_tracker.h  Menu.cpp  Menu.h  README.md  User.cpp  User.h  main.cpp  shit.cpp  shit.h
Tests/: test.cpp
code/: CSI.h  Measurement.cpp  Measurement.h  User.cpp  User.h  functions.cpp  functions.h
code/API/: CS.cpp  CS.h  CSI.cpp  CSI.h
code/app/: KUPA.cpp  KUPA.h  Menu.cpp  Menu.h  UserApp.cpp  UserApp.h
code/locations/: Location.cpp  Location.h
code/locations/locations/: Krakow.cpp  Krakow.h  Opole.cpp  Opole.h  Siechnice.cpp  Siechnice.h  Wroclaw.cpp  Wroclaw.h
